--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ script:
   - cd ./env-sample/
   - npm install
   - npm install -g firebase-tools
-  - test $TRAVIS_BRANCH = develop &&  firebase use development
-  - test $TRAVIS_BRANCH = master && firebase use production
+  - if [ $TRAVIS_BRANCH == "develop" ]; then firebase use development; fi
+  - if [ $TRAVIS_BRANCH == "master" ]; then firebase use production; fi
   - npm run build
   - npm run deploy
   branches:
