Make sure to switch environments on Firebase during the deployment process.

--- a/env-sample/.firebaserc
+++ b/env-sample/.firebaserc
@@ -1,6 +1,5 @@
 {
   "projects": {
-    "development": "env-sample-dev",
-    "production": "env-sample-prod"
+    "default": "env-sample-dev"
   }
 }
