--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ install:
   - npm install -g firebase-tools
   - npm install
 before_script:
-  - if [ $TRAVIS_BRANCH == "develop" ]; then firebase use development; fi
-  - if [ $TRAVIS_BRANCH == "master" ]; then node prepare-prod-build.js; firebase use production; fi
+  - if [ $TRAVIS_BRANCH == "master" ]; then node prepare-prod-build.js; fi
 script:
   - npm run build
   - npm run deploy
